# voice_to_taskwarrior

./: .gitignore  Cargo.toml
src/: config.rs  lib.rs  logger.rs  main.rs  voice_memo.rs  voice_to_task_converter.rs
