[package]
name = "voice_to_taskwarrior"
version = "0.1.0"
authors = ["Nikos Koukis <nickkouk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.16"
clap = "*"
anyhow = "1.0.40"
deepspeech = "0.9.0"
task-hookrs = "0.7.0"
audrey = "0.3.0"
dasp_interpolate = { version = "0.11", features = ["linear"] }
dasp_signal = "0.11.0"
chrono = "0.4.19"
# have to use this version - has to match with the one internally used in
# task_hookrs
uuid = { version = "0.7.4", features = ["serde", "v4"] }
xdg = "2.2.0"
toml = "0.5.8"
serde_derive = "1.0.125"
serde = "1.0.125"
shellexpand = "2.1.0"
